// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card: Component should render children when passed in 1`] = `
<Component>
  <CardComponent>
    <div
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "column",
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "justifyContent": "space-between",
          "padding": "12px 14px 14px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div>
          <h1>
            Test
          </h1>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </CardComponent>
</Component>
`;

exports[`Card: Component should render component  with custom style and with header 1`] = `
<Component
  customStyles={
    Object {
      "color": "blue",
    }
  }
  headerComponent={
    <h1
      style={
        Object {
          "color": "red",
        }
      }
    >
      header
    </h1>
  }
>
  <CardComponent
    customStyles={
      Object {
        "color": "blue",
      }
    }
    headerComponent={
      <h1
        style={
          Object {
            "color": "red",
          }
        }
      >
        header
      </h1>
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "blue",
          "display": "flex",
          "flexDirection": "column",
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "justifyContent": "space-between",
          "padding": "12px 14px 14px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "color": undefined,
              "marginBottom": 14,
            }
          }
        >
          <h1
            style={
              Object {
                "color": "red",
              }
            }
          >
            header
          </h1>
        </div>
        <div>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </CardComponent>
</Component>
`;

exports[`Card: Component should render correctly 1`] = `
<Component>
  <CardComponent>
    <div
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "#FFF",
          "display": "flex",
          "flexDirection": "column",
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "justifyContent": "space-between",
          "padding": "12px 14px 14px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      />
    </div>
  </CardComponent>
</Component>
`;

exports[`Card: Component should render with attributes 1`] = `
<Component
  customStyles={
    Object {
      "color": "blue",
    }
  }
  id="test-id"
  title="test title"
>
  <CardComponent
    customStyles={
      Object {
        "color": "blue",
      }
    }
    id="test-id"
    title="test title"
  >
    <div
      id="test-id"
      style={
        Object {
          "backgroundColor": "#1d1d20",
          "borderTop": "2px solid #FFF",
          "color": "blue",
          "display": "flex",
          "flexDirection": "column",
          "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "justifyContent": "space-between",
          "padding": "12px 14px 14px",
          "position": "relative",
        }
      }
      title="test title"
    >
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        Card with attributes
      </div>
    </div>
  </CardComponent>
</Component>
`;
